aTunes 2.0.1
-------------
- FIX: Some Substance L&F skins were not working
- FIX: Can't sort or shuffle a new created playlist
- FIX: Too many CRs in lyrics [2991316]
- FIX: Problems with accuracy of progress bar [2989229]
- FIX: Write repository after reading XML [2991957]
- FIX: Avoid progress bar move when time labels needs extra space


aTunes 2.0.0
-------------
- Support for libnotify (Gnome) (Patch by Marco Biscaro)
- File chooser in tag dialog should open in directory of the audio file (feature request [2786730])
- Three new look and feel skins (Dust, Dust Coffee and Twilight)
- Avoid child nodes in album tree view in navigator
- Use artist names comparator in device view
- New command to start CD ripper
- Start app and run commands if there is no more instances
- New extended tool tip used in all navigation views
- New options to execute commands before and after accessing repository
- Added options in help menu to go to web site or wiki
- New option to edit tags from folder name pattern
- Show warning before clearing playlist (feature request [2786727])
- Show warning if karaoke or normalization mode is enabled
- Audio object properties panel enhancements
- Added option to synchronize device with play list
- Visual improvements in full screen mode
- Font chooser for configuring the font settings
- Option to add audio object to playlist after current audio object
- Context panel redesign
- Gui theme can be changed without restart
- Allow repository load in background
- Allow reordering of playlist tabs
- Cover navigator window should be resizable
- New lyric engine using www.winampcn.com (Patch by Taylor Tang)
- New option to store repository configuration in a custom folder
- Some navigation views share common columns as play list
- Filter redesign
- New window layouts available
- Cache for audio file images
- Allow jumping to the previous/next song in the playlist in the tag edit dialog
- Use mp4 instead of flv for Youtube download