@@ -6,6 +6,7 @@ aTunes 2.0.1
 - FIX: Problems with accuracy of progress bar [2989229]
 - FIX: Write repository after reading XML [2991957]
 - FIX: Avoid progress bar move when time labels needs extra space
+- FIX: Don't show "Buffering" message for downloaded podcast feed entries
 
 
 aTunes 2.0.0
